[gd_scene load_steps=23 format=3 uid="uid://ceex8gfacw633"]

[ext_resource type="Texture2D" uid="uid://den7igs5mq3s4" path="res://assets/necro/Necromancer_creativekind-Sheet.png" id="1_fh5or"]
[ext_resource type="Script" path="res://scripts/necromancer.gd" id="1_ik8d7"]
[ext_resource type="PackedScene" uid="uid://cv08skf12i7yl" path="res://scenes/skeleton.tscn" id="2_etgn3"]
[ext_resource type="PackedScene" uid="uid://c2ruf735lsivq" path="res://scenes/healthbar.tscn" id="2_h63k7"]
[ext_resource type="PackedScene" uid="uid://cxoi0pn3bwg62" path="res://scenes/necromancer_projectile.tscn" id="3_qcoja"]
[ext_resource type="Texture2D" uid="uid://julbulhtyo4p" path="res://assets/lightning/Lightning_1_512-sheet.png" id="3_xpf7a"]
[ext_resource type="Texture2D" uid="uid://bexnaaj7jnpep" path="res://assets/player2/spr_shadow.png" id="4_se5sy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_d23rf"]
height = 46.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hts21"]
radius = 9.0
height = 44.0

[sub_resource type="Animation" id="Animation_6l1qt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 6)]
}

[sub_resource type="Animation" id="Animation_3onm5"]
resource_name = "death"
length = 1.25001
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 6), Vector2i(1, 6), Vector2i(2, 6), Vector2i(3, 6), Vector2i(4, 6), Vector2i(5, 6), Vector2i(6, 6), Vector2i(7, 6), Vector2i(8, 6), Vector2i(9, 6)]
}

[sub_resource type="Animation" id="Animation_g1ilf"]
resource_name = "hit"
length = 0.208338
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0416667, 0.0833333, 0.125, 0.166667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [85, 86, 87, 88, 89]
}

[sub_resource type="Animation" id="Animation_chk82"]
resource_name = "idle"
length = 1.33335
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333, 1, 1.16667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_lrwab"]
resource_name = "knockback"
length = 1.62501
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46]
}

[sub_resource type="Animation" id="Animation_8u2di"]
resource_name = "ranged_attack"
length = 2.12501
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.625, 1.75, 1.875, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.33864),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot"
}]
}

[sub_resource type="Animation" id="Animation_oewsh"]
resource_name = "skill"
length = 1.62501
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63]
}

[sub_resource type="Animation" id="Animation_nuhgr"]
resource_name = "summon"
length = 1.62501
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn"
}]
}

[sub_resource type="Animation" id="Animation_mld84"]
resource_name = "walk"
length = 1.00001
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [17, 18, 19, 20, 21, 22, 23, 24]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gksg4"]
_data = {
"RESET": SubResource("Animation_6l1qt"),
"death": SubResource("Animation_3onm5"),
"hit": SubResource("Animation_g1ilf"),
"idle": SubResource("Animation_chk82"),
"knockback": SubResource("Animation_lrwab"),
"ranged_attack": SubResource("Animation_8u2di"),
"skill": SubResource("Animation_oewsh"),
"summon": SubResource("Animation_nuhgr"),
"walk": SubResource("Animation_mld84")
}

[sub_resource type="Animation" id="Animation_ejnoc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_1vrml"]
resource_name = "default"
step = 0.111111
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.111111, 0.222222, 0.333333, 0.444444, 0.555556, 0.666667, 0.777778, 0.888889),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_02iuy"]
_data = {
"RESET": SubResource("Animation_ejnoc"),
"default": SubResource("Animation_1vrml")
}

[node name="necromancer" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 131
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_ik8d7")
max_health = 400.0
minion = ExtResource("2_etgn3")
skull_projectile = ExtResource("3_qcoja")

[node name="SprShadow" type="Sprite2D" parent="."]
position = Vector2(0, 32)
scale = Vector2(2, 2)
texture = ExtResource("4_se5sy")

[node name="Sprite2D" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -23)
texture = ExtResource("1_fh5or")
hframes = 17
vframes = 7
frame = 102

[node name="hurtbox" type="Area2D" parent="Sprite2D"]
visible = false
position = Vector2(0, 24)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/hurtbox"]
position = Vector2(0, 7)
shape = SubResource("CapsuleShape2D_d23rf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 8)
shape = SubResource("CapsuleShape2D_hts21")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gksg4")
}
autoplay = "idle"

[node name="healthbar" parent="." instance=ExtResource("2_h63k7")]
z_index = 2
offset_left = -16.0
offset_top = -28.0
offset_right = 48.0
offset_bottom = -23.0
scale = Vector2(0.5, 0.5)

[node name="debug" type="Label" parent="."]
visible = false
offset_left = -12.0
offset_top = -41.0
offset_right = 28.0
offset_bottom = -18.0
theme_override_font_sizes/font_size = 8
text = "debug"

[node name="misc" type="Node2D" parent="."]
position = Vector2(0, 28)

[node name="damage_label" type="Marker2D" parent="misc"]
visible = false
position = Vector2(-4, -68)

[node name="shock_timer" type="Timer" parent="misc"]
wait_time = 0.1

[node name="lightning" type="Sprite2D" parent="misc"]
visible = false
modulate = Color(0.980392, 0.901961, 0.388235, 1)
position = Vector2(0, -43)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_xpf7a")
hframes = 3
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="misc/lightning"]
libraries = {
"": SubResource("AnimationLibrary_02iuy")
}
speed_scale = 2.0

[node name="knockback_skill_timer" type="Timer" parent="misc"]
one_shot = true

[connection signal="area_entered" from="Sprite2D/hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="misc/shock_timer" to="." method="_on_shock_timer_timeout"]
[connection signal="timeout" from="misc/knockback_skill_timer" to="." method="_on_knockback_skill_timer_timeout"]
